# projekt

./: Agata.txt  README.md  game.py  main.py  pyproject.toml
